log
Sat 22 Apr 2023 11:44:50 AM UTC: 
 tests:  1|8
total_score: 0/70
54bf5ca
Sat 22 Apr 2023 11:09:08 PM UTC: 
 treemap.c | 60 +++++++++++++++++++++++-------------------------------------
 1 file changed, 23 insertions(+), 37 deletions(-)
 tests:  4|7
total_score: 5/70
bf87534
Sat 22 Apr 2023 11:17:20 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 48 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:99:11: error: redefinition of ‘minimum’
   99 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:87:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   87 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
Compilation failed
f7d8fc4
Sat 22 Apr 2023 11:17:36 PM UTC: 
 treemap.c | 28 ++++++++++++++++++----------
 1 file changed, 18 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c:108:11: error: redefinition of ‘minimum’
  108 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:95:12: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   95 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
Compilation failed
de9f245
Sat 22 Apr 2023 11:21:34 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:100:11: error: redefinition of ‘minimum’
  100 | TreeNode *minimum(TreeNode *x) { return NULL; }
      |           ^~~~~~~
treemap.c:88:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   88 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
Compilation failed
f6515a9
Sat 22 Apr 2023 11:22:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:100:11: error: redefinition of ‘minimum’
  100 | TreeNode *minimum(TreeNode *x) {}
      |           ^~~~~~~
treemap.c:88:11: note: previous definition of ‘minimum’ with type ‘TreeNode *(TreeNode *)’
   88 | TreeNode *minimum(TreeNode *x) {
      |           ^~~~~~~
treemap.c: In function ‘minimum’:
treemap.c:100:33: error: control reaches end of non-void function [-Werror=return-type]
  100 | TreeNode *minimum(TreeNode *x) {}
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
6347a33
Sat 22 Apr 2023 11:24:46 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|5
total_score: 15/70
3d67eb0
Sat 22 Apr 2023 11:27:44 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|5
total_score: 15/70
365f987
Sat 22 Apr 2023 11:28:50 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|5
total_score: 15/70
ae8c834
Sun 23 Apr 2023 12:12:06 AM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
4d4f1b3
Sun 23 Apr 2023 12:12:39 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c4362da
Sun 23 Apr 2023 01:31:14 AM UTC: 
 treemap.c | 45 +++++++++++++++++----------------------------
 1 file changed, 17 insertions(+), 28 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:13: error: unused variable ‘a_node’ [-Werror=unused-variable]
  105 |   TreeNode *a_node;
      |             ^~~~~~
treemap.c: In function ‘nextTreeMap’:
treemap.c:136:35: error: control reaches end of non-void function [-Werror=return-type]
  136 | Pair *nextTreeMap(TreeMap *tree) {}
      |                                   ^
cc1: all warnings being treated as errors
Compilation failed
9c1a527
Sun 23 Apr 2023 01:51:19 AM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++----------
 1 file changed, 24 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:150:35: error: control reaches end of non-void function [-Werror=return-type]
  150 | Pair *nextTreeMap(TreeMap *tree) {}
      |                                   ^
cc1: all warnings being treated as errors
Compilation failed
cf96537
Sun 23 Apr 2023 01:51:34 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
e7d0977
Sun 23 Apr 2023 01:55:45 AM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
6cae3e7
Sun 23 Apr 2023 01:57:07 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  15|4
total_score: 25/70
6951971
Sun 23 Apr 2023 01:57:22 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
3c975e3
Sun 23 Apr 2023 01:58:44 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  18|3
total_score: 40/70
6f8a977
Sun 23 Apr 2023 02:02:57 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
f9b39b1
Sun 23 Apr 2023 02:24:03 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
f0bdfe0
Sun 23 Apr 2023 02:24:28 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  24|1
total_score: 55/70
2e76338
Sun 23 Apr 2023 02:24:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
1b06988
Sun 23 Apr 2023 02:25:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
4e0e783
Sun 23 Apr 2023 02:27:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
109b595
Sun 23 Apr 2023 02:27:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
26996cc
Sun 23 Apr 2023 02:27:37 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
e069dac
Sun 23 Apr 2023 02:27:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 55/70
0f091e2
Sun 23 Apr 2023 02:28:00 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  24|1
total_score: 55/70
8030015
